Non-unified build fixes, late March 2023 edition https://bugs.webkit.org/show_bug.cgi?id=254260

Unreviewed non-unified build fixes.

* Source/WebCore/Modules/mediastream/MediaDeviceInfo.cpp: Add missing
  wtf/IsoMallocInlines.h header inclusion.
* Source/WebCore/Modules/speech/SpeechRecognitionErrorEvent.cpp: Add
  missing ScriptExecutionContext.h header inclusion.
* Source/WebCore/Modules/speech/SpeechSynthesisErrorEvent.cpp: Ditto.
* Source/WebCore/Modules/speech/SpeechSynthesisEvent.cpp: Ditto.
* Source/WebCore/css/typedom/InlineStylePropertyMap.h: Add missing
  wtf/WeakPtr.h header inclusion, and missing WeakPtrImplWithEventTargetData
  forward declaration.
* Source/WebCore/dom/DecodedDataDocumentParser.cpp: Add missing
  Document.h header inclusion.
* Source/WebCore/dom/DocumentSharedObjectPool.h: Replace unused
  wtf/HashMap.h header inclusion with the correct wtf/HashSet.h one.
* Source/WebCore/html/track/InbandWebVTTTextTrack.cpp: Add missing
  ScriptExecutionContext.h header inclusion.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
  Add missing Shape.h header inclusion.
* Source/WebCore/rendering/RenderHTMLCanvas.cpp: Add missing
  RenderLayer.h header inclusion.
* Source/WebKit/UIProcess/API/C/WKContext.cpp: Add missing
  WebFrameProxy.h header inclusion.
* Source/WebKit/UIProcess/ProvisionalFrameProxy.cpp: Add missing
  WebProcessProxy.h header inclusion.
* Source/WebKit/UIProcess/SuspendedPageProxy.cpp: Add missing
  WebFrameProxy.h header inclusion.
* Source/WebKit/UIProcess/WebFormClient.cpp: Ditto.
* Source/WebKit/UIProcess/WebProcessProxy.cpp: Add missing
  SuspendedPageProxy.h header inclusion.
* Source/WebKit/UIProcess/WebScreenOrientationManagerProxy.cpp: Add
  missing WebProcessProxy.h header inclusion.

Canonical link: https://commits.webkit.org/261953@main